# ProtoTestGUI

./: .gitignore  README.md
CppProtoParser/: CMakeLists.txt
CppProtoParser/Protocol/Proto/: ParserEntry.proto  TestMessages.proto
CppProtoParser/src/: main.cpp
CppProtoParser/src/ParserUtilities/: FileUtilities.h  StreamUtilities.h  Utilities.h
CppProtoParser/src/TypeParsingTests/: TestVarintTypes.h
CppTranscieverExample/: CMakeLists.txt
CppTranscieverExample/Receiver/src/: main.cpp
CppTranscieverExample/Receiver/src/UnixSocket/: UnixSocketClient.cpp  UnixSocketClient.h
CppTranscieverExample/Transmitter/src/: main.cpp
CppTranscieverExample/Transmitter/src/UnixSocket/: UnixSocketServer.cpp  UnixSocketServer.h
JsProtobufjsExample/: Trial.js  awesome.proto  package-lock.json  package.json
JsReceiverExample/: GenerateProto.sh  Receiver.js  package-lock.json
JsReceiverExample/Protocol/Proto/: descriptor.proto
toolchains/: native.cmake
